apps/docs/v0.2.9/concepts/mental-model.mdx
---
title: "Concepts"
description: "The Rigkit mental model: workflows, tasks, context, providers, workspaces, operations, fragments, and hosts."
noindex: true
---

Rigkit is easiest to understand as a typed workflow runner for development
environments. The workflow prepares durable context. Workspaces use that
context to create named resources. Operations let humans and agents work with
those resources.

```mermaid
flowchart TD
  Config["rigkit/index.ts"] --> Plan["rig plan --workflow <name>"]
  Config --> Apply["rig apply"]
  Apply --> Cache["Cached workflow context"]
  Cache --> Workspace["rig create <workspace>"]
  Workspace --> Run["rig run <workspace> <operation>"]
  Run --> Agent["Agent"]
  Run --> Developer["Developer"]
  Run --> CI["CI or tests"]
```

The important shift is that the environment is the artifact. Agents,
developers, and automation all start from the same prepared state instead of
rebuilding setup instructions by hand.

## Workflow

A workflow is the top-level unit Rigkit can plan and apply. It has:

- A name.
- A provider map.
- A root node, usually a `sequence`.
- Optional workspace lifecycle hooks.
- Optional workflow and workspace operations.

Most projects have one workflow:

```ts
const app = workflow("website", {
  providers: {
    freestyle: freestyle.provider(),
  },
});

export const website = app.sequence("website");
```

Larger repos can export multiple named workflow nodes from `rigkit/index.ts`.

## Node

A node is a piece of the workflow graph. Rigkit has three node kinds:

- `task`: a leaf unit of work.
- `sequence`: ordered composition.
- `parallel`: independent branches that start from the same upstream context.

Nodes can be stored in variables and reused:

```ts
const base = app.sequence("base").task("install-tooling", async () => {
  return { ctx: { snapshotId: "snap_base" } };
});

export const website = app.sequence("app").add(base);
```

Sequences and parallel branches compile into a graph:

```mermaid
flowchart LR
  Base["base image"] --> Tooling["install tooling"]
  Tooling --> Repo["clone repo"]
  Tooling --> Auth["authenticate CLIs"]
  Repo --> Join["final context"]
  Auth --> Join
  Join --> Workspace["workspace.create"]
  Workspace --> Ops["open, ssh, test, status"]
```

## Task

A task is the only node kind that runs user code during `rig apply`.

```ts
.task("clone", async ({ step, providers }) => {
  return {
    ctx: {
      ...step.ctx,
      repoPath: "/workspace/app",
    },
  };
});
```

Tasks should be deterministic enough to cache. They can call providers, run VM
commands, open interactive sessions, and return JSON context. A task that
returns `undefined` preserves the current runtime context, but if later code
needs typed context, return `{ ctx: step.ctx }` explicitly.

## Context

Context is the JSON object passed from task to task.

```ts
.task("prepare", async () => ({
  ctx: {
    snapshotId: "snap_123",
    repoPath: "/workspace/app",
  },
}))
.task("install", async ({ step }) => {
  await install(step.ctx.repoPath);
  return { ctx: step.ctx };
});
```

Context is persisted in the Rigkit state database. Keep it small and durable:
ids, paths, ports, booleans, serialized provider artifact refs, and other data
that can survive process restarts.

Do not put live SDK clients, functions, streams, or accidental secrets in task
context.

## Provider

A provider owns integration with an external system. It receives resolved
provider config, creates a runtime for each task or operation, and can store
provider-specific state.

Examples:

- Freestyle creates VMs, snapshots, SSH options, terminal URLs, and VS Code
  URLs.
- cmux asks the local host to open cmux workspaces.
- gcloud copies local CLI auth files into a workspace.
- A custom provider might create database branches, allocate test accounts, or
  talk to an internal platform.

Provider config is part of the provider fingerprint used by the cache.

## Workspace

A workspace is a named runtime instance created from the final workflow
context.

```sh
rig apply --workflow dev
rig create alice
rig create review-123
```

The workspace `create` hook might create a VM from a prepared snapshot, create
a branch, start a database, or allocate any other provider resources. The
returned workspace context is stored until `rig rm <name>` calls the `remove`
hook.

## Operation

An operation is a project-defined command.

Workspace operations run against a named workspace:

```sh
rig run alice open-cmux
rig run alice ssh
rig run alice status --json
```

Workflow-level operations are not tied to one workspace. They are useful for
project-wide actions or commands that select their target through input.

Operation ids share a namespace with Rigkit host commands, so built-in ids such
as `plan`, `apply`, `create`, `run`, and `help` are reserved.

## Cache

Rigkit caches task output. A cached task can be reused when the engine finds a
matching node run for the current task path, task function, config stack,
provider fingerprint, output schema, upstream run ids, cache TTL, and artifact
validity.

The practical result:

- Change an early task, and only dependent work reruns.
- Re-run `rig plan` to see what is cached and what is pending.
- Use cache commands when you need to invalidate or clear state manually.

```sh
rig cache ls
rig cache invalidate clone-repo
rig cache invalidate --all
rig cache clear --local
```

## Fragment

A fragment is just a reusable workflow node. Fragments become powerful when they
are:

- parameterized with `.configure(...)`;
- marked `.global()` so many projects can reuse one cached base;
- wrapped so a reusable package controls setup before and checks after
  repo-specific work.

Fragments are how teams share expensive base images, authenticated CLI setup,
toolchain warmups, and other common development environment setup.

## Host and runtime

The global `rig` CLI starts a project-local runtime daemon from the installed
`@rigkit/sdk` package. The runtime loads `rigkit/index.ts`, owns the engine, and
serves operations to the host.

The host side provides local capabilities such as:

- opening URLs;
- running trusted local commands;
- presenting provider-owned interaction URLs;
- registering capabilities such as `cmux.open`.

This split lets provider code run in the project runtime while sensitive local
actions stay behind an explicit host boundary.
